    (J.Andreina via vinayakumarb)

    HDFS-9530. ReservedSpace is not cleared for abandoned Blocks.
    (Brahma Reddy Battula)

    HDFS-10178. Permanent write failures can happen if pipeline recoveries
    occur for the first packet (kihwal)

    HDFS-9365. Balancer does not work with the HDFS-6376 HA setup. (Tsz Wo
    Nicholas Sze)

Release 2.6.4 - 2016-02-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8647. Abstract BlockManager's rack policy into BlockPlacementPolicy.
    (Brahma Reddy Battula via mingma)

    HDFS-9313. Possible NullPointerException in BlockManager if no excess
    replica can be chosen. (mingma)

    HDFS-9314. Improve BlockPlacementPolicyDefault's picking of excess
    replicas. (Xiao Chen via zhz)

    HDFS-6945. BlockManager should remove a block from excessReplicateMap and
    decrement ExcessBlocks metric when the block is removed. (aajisaka)

    HDFS-9574. Reduce client failures during datanode restart (kihwal)

    HDFS-9415. Document dfs.cluster.administrators and
    dfs.permissions.superusergroup. (Xiaobing Zhou via Arpit Agarwal)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-9445. Datanode may deadlock while handling a bad volume.
    (Wlater Su via Kihwal)

    HDFS-9600. do not check replication if the block is under construction
    (Phil Yang via vinayakumarb)

    HDFS-8767. RawLocalFileSystem.listStatus() returns null for UNIX pipefile.
    (Kanaka Kumar Avvaru via wheat9)

    HDFS-9294. DFSClient deadlock when close file and failed to renew lease.
    (Brahma Reddy Battula via szetszwo)

    HDFS-4660. Block corruption can happen during pipeline recovery (kihwal)

    HDFS-9178. Slow datanode I/O can cause a wrong node to be marked bad.
    (Kihwal Lee)

    HDFS-8722. Optimize datanode writes for small writes and flushes. 
    (Kihwal Lee)

    HDFS-9220. Reading small file (< 512 bytes) that is open for append fails
    due to incorrect checksum (Jing Zhao via kihwal)
